Added megan to hackathon.html

--- a/hackathon.html
+++ b/hackathon.html
@@ -37,7 +37,7 @@
 
     <h3 align=center>Tell us about yourself!</h3>
 
-    <tble>
+    <table>
       <tr>
         <th>Name</th>
         <th>Favorite Cereal</th>
@@ -48,7 +48,12 @@
         <td>Reeses Puffs</td>
         <td>I like sandals</td>
       </tr>
-    </talbe>
+      <tr>
+        <td>Megan</td>
+        <td>Honey Nut Cheerios</td>
+        <td>I like sandals</td>
+      </tr>
+    </table>
 
     <p>Remember, you can view the HTML code from this or any other page by using the "View Page Source" command of your browser.</p>
 
